Revert "replace all occurences of "Blacklist" with "Blocklist""
This reverts commit 6c8cec2c7fa18ed804ae192fec5325a45aba5f0b.

--- a/src/_locales/bg_BG/messages.json
+++ b/src/_locales/bg_BG/messages.json
@@ -35,9 +35,9 @@
     "message": "Екстри",
     "description": "Extras"
   },
-  "navigationBlocklist": {
+  "navigationBlacklist": {
     "message": "Черен списък",
-    "description": "Blocklist"
+    "description": "Blacklist"
   },
   "navigationAbout": {
     "message": "Относно",
