--- a/src/_locales/da_DK/messages.json
+++ b/src/_locales/da_DK/messages.json
@@ -35,9 +35,9 @@
     "message": "Ekstra",
     "description": "Extras"
   },
-  "navigationBlocklist": {
-    "message": "Blocklist",
-    "description": "Blocklist"
+  "navigationBlacklist": {
+    "message": "Blacklist",
+    "description": "Blacklist"
   },
   "navigationAbout": {
     "message": "Om",
