--- a/src/_locales/el_GR/messages.json
+++ b/src/_locales/el_GR/messages.json
@@ -35,9 +35,9 @@
     "message": "Πρόσθετες επιλογές",
     "description": "Extras"
   },
-  "navigationBlocklist": {
+  "navigationBlacklist": {
     "message": "Μαύρη λίστα",
-    "description": "Blocklist"
+    "description": "Blacklist"
   },
   "navigationAbout": {
     "message": "Σχετικά",
