--- a/src/_locales/nl_NL/messages.json
+++ b/src/_locales/nl_NL/messages.json
@@ -35,9 +35,9 @@
     "message": "Extra's",
     "description": "Extras"
   },
-  "navigationBlocklist": {
+  "navigationBlacklist": {
     "message": "Blokkeerlijst",
-    "description": "Blocklist"
+    "description": "Blacklist"
   },
   "navigationAbout": {
     "message": "Over",
