--- a/src/_locales/uk_UA/messages.json
+++ b/src/_locales/uk_UA/messages.json
@@ -35,9 +35,9 @@
     "message": "Додатки",
     "description": "Extras"
   },
-  "navigationBlocklist": {
+  "navigationBlacklist": {
     "message": "Чорний список",
-    "description": "Blocklist"
+    "description": "Blacklist"
   },
   "navigationAbout": {
     "message": "Більше про це",
