--- a/src/_locales/sk_SK/messages.json
+++ b/src/_locales/sk_SK/messages.json
@@ -35,9 +35,9 @@
     "message": "Extra",
     "description": "Extras"
   },
-  "navigationBlocklist": {
+  "navigationBlacklist": {
     "message": "Čierna listina",
-    "description": "Blocklist"
+    "description": "Blacklist"
   },
   "navigationAbout": {
     "message": "O doplnku",
