add new "combined" gesture matching algorithm, make it the default algorithm and move the setting back to advanced

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -66,6 +66,10 @@
     "message": "Matching algorithm",
     "description": "Matching algorithm"
   },
+  "settingLabelMatchingAlgorithmCombined": {
+    "message": "Combined",
+    "description": "Combined"
+  },
   "settingLabelMatchingAlgorithmStrict": {
     "message": "Strict",
     "description": "Strict"
