--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1490,17 +1490,17 @@
     "description": "Cancel"
   },
 
+  "lightTheme": {
+    "message": "Light theme",
+    "description": "Light theme"
+  },
   "darkTheme": {
     "message": "Dark theme",
     "description": "Dark theme"
   },
-  "whiteTheme": {
-    "message": "White theme",
-    "description": "White theme"
-  },
-  "defaultTheme": {
-    "message": "Default theme",
-    "description": "Default theme"
+  "highContrastTheme": {
+    "message": "High contrast theme",
+    "description": "High contrast theme"
   },
 
   "welcomePageUpperSectionReference": {
